--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>CoinBase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
